--- a/reactjs/index.html
+++ b/reactjs/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8"/>
 		<link rel="icon" type="image/svg+xml" href="/spotify-logo.svg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>Vite + React</title>
+		<title>Spotify Search - Portfolio 3</title>
+		<meta name="description" content="This project uses the Spotify Web API to allow users to search for music within Spotify's music library.">
 	</head>
 	<body>
 		<div id="root"></div>
