--- a/reactjs/index.html
+++ b/reactjs/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8"/>
-		<link rel="icon" type="image/svg+xml" href="/spotify-logo.svg"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>Spotify Search - Portfolio 3</title>
-		<meta name="description" content="This project uses the Spotify Web API to allow users to search for music within Spotify's music library.">
-	</head>
-	<body>
-		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/spotify-logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Spotify Search</title>
+    <meta
+      name="description"
+      content="This project uses the Spotify Web API to allow users to search for music within Spotify's music library."
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
